Changelog
=========

2.1 (unreleased)
----------------


2.1b1 (2010-10-14)
------------------

* Raise AT ObjectInitializedEvent and ObjectEditedEvent when the wizard is finished.
  [davisagli]

* Updated the test setup to use a layer so that it can be extended by Megaphone
  plugins more easily.
  [davisagli]

* Added an upgrade step to remove the old "optional-recipients" field which is
  no longer needed.
  [davisagli]

* Revamped the UI of the recipients wizard step.  Recipient settings are now
  configured in an overlay.
  [davisagli]

* Introduced the concept of pluggable "recipient sources".  Each recipient source
  has its own settings, can provide content for the Megaphone form, and is queried
  for recipients when the form is submitted.  The old recipient functionality
  (with "required" and "optional" recipients) has been refactored into the "standard"
  recipient source.
  [davisagli]

2.0 (2010-10-14)
----------------

* Render the signatures portlet when sig_portlet_min_count is not set.
  [khink]

* Removed reference to "letter" from the default thank you message so that
  it makes sense for a petition too.
  [davisagli]

* Moved helper functions into the utils module.
  [davisagli]

* Only show "latest signatures" text in portlet if there are signatures to
  show.
  [jbaldivieso]

* Refer to "offline signature count" instead of "goose factor".
  [jbaldivieso]

* Fix upgrade step for Plone 3 -> Plone 4 to only run for sites that have
  Megaphone installed.
  [jbaldivieso]

2.0b1 (2010-08-19)
------------------

* Move the main e-mail switch to the recipients wizard step, and rename the
  delivery step to salesforce since that's all it covers now.  Make it only
  show up if Salesforce support is installed.
  [davisagli]

* Added a permission to control who can view signatures.
  [davisagli]

* Don't display the Intro page of the wizard when returning to edit an existing
  Megaphone Action.
  [davisagli]
